[IMP]pms: added pay button in folio portal

--- a/pms/views/folio_portal_templates.xml
+++ b/pms/views/folio_portal_templates.xml
@@ -63,6 +63,10 @@
                                 >
                                 <t t-esc="folio.name" />
                             </a>
+                            <a
+                                    t-att-href="folio.get_portal_url(suffix='/precheckin')"
+                                    t-att-title="Precheckin"
+                                >Precheckin</a>
                         </td>
                         <td><span t-field="folio.date_order" /></td>
                         <td class="text-right"><span
@@ -73,6 +77,116 @@
             </tbody>
         </t>
       </t>
+    </template>
+
+      <template id="portal_folio_payment" name="Folio Payment">
+        <div
+            class="row"
+            t-if="not tx_ids and folio.state in ('confirm','done') and folio.payment_state in ('not_paid', 'partial') and folio.amount_total"
+            id="portal_pay"
+        >
+            <div class="modal fade" id="pay_with" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title">Pay with</h3>
+                            <button
+                                type="button"
+                                class="close"
+                                data-dismiss="modal"
+                                aria-label="Close"
+                            >×</button>
+                        </div>
+                        <div class="modal-body">
+                            <div
+                                t-if="pms or acquirers"
+                                id="payment_method"
+                                class="text-left col-md-13"
+                            >
+                                <t t-call="payment.payment_tokens_list">
+                                    <t t-set="mode" t-value="'payment'" />
+                                    <t
+                                        t-set="partner_id"
+                                        t-value="folio.partner_id.id if request.env.user._is_public() else request.env.user.partner_id.id"
+                                    />
+                                    <t
+                                        t-set="success_url"
+                                        t-value="folio.get_portal_url()"
+                                    />
+                                    <t
+                                        t-set="error_url"
+                                        t-value="folio.get_portal_url()"
+                                    />
+                                    <t
+                                        t-set="access_token"
+                                        t-value="access_token or ''"
+                                    />
+                                    <t t-set="callback_method" t-value="''" />
+                                    <t
+                                        t-set="form_action"
+                                        t-value="'/folio/pay/' + str(folio.id) + '/s2s_token_tx/'"
+                                    />
+                                    <t
+                                        t-set="prepare_tx_url"
+                                        t-value="'/folio/pay/' + str(folio.id) + '/form_tx/'"
+                                    />
+                                    <t t-set="submit_txt">Pay Now</t>
+                                    <t t-set="icon_class" t-value="'fa-lock'" />
+                                </t>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </template>
+
+    <template id="portal_folio_page_payment" name="Payment on My Folios">
+        <t
+            t-set="tx_ids"
+            t-value="folio.transaction_ids.filtered(lambda tx: tx.state in ('pending', 'authorized', 'done'))"
+        />
+        <t
+            t-set="pending_manual_txs"
+            t-value="tx_ids.filtered(lambda tx: tx.state == 'pending' and tx.acquirer_id.provider in ('transfer', 'manual'))"
+        />
+        <div>
+            <a
+                href="#"
+                t-if="folio.state in ('confirm','done') and folio.payment_state in ('not_paid', 'partial') and folio.amount_total and (pending_manual_txs or not tx_ids)"
+                class="btn btn-primary btn-block mb-2"
+                data-toggle="modal"
+                data-target="#pay_with"
+            >
+                <i class="fa fa-fw fa-arrow-circle-right" /> Pay Now
+            </a>
+            <div
+                t-if="tx_ids and not pending_manual_txs and folio.payment_state not in ('paid', 'in_payment')"
+                class="alert alert-info py-1 mb-2"
+            >
+                <i class="fa fa-fw fa-check-circle" /> Pending
+            </div>
+            <div
+                t-if="folio.payment_state in ('paid', 'in_payment')"
+                class="alert alert-success py-1 mb-2"
+            >
+                <i class="fa fa-fw fa-check-circle" /> Paid
+            </div>
+        </div>
+
+        <t
+            t-set="tx_ids"
+            t-value="folio.transaction_ids.filtered(lambda tx: tx.state in ('authorized', 'done'))"
+        />
+        <div
+            t-if="not tx_ids and folio.state in('confirm','done') and folio.payment_state in ('not_paid', 'partial') and folio.amount_total"
+            id="portal_pay"
+        >
+            <div t-if="pms or acquirers" id="payment_method">
+                <t t-call="pms.portal_folio_payment" />
+            </div>
+        </div>
+
     </template>
     <template
         id="folio_portal_template"
@@ -94,16 +208,19 @@
                         <ul
                             class="list-group list-group-flush flex-wrap flex-row flex-lg-column"
                         >
-                            <li class="list-group-item">
+                            <li class="list-group-item flex-grow-1">
+                                <div>
+                                    <div t-call="pms.portal_folio_page_payment" />
+                                </div>
                                 <div class="o_download_pdf btn-toolbar flex-sm-nowrap">
-                                    <div class="btn-group mr-1 mb-1">
+                                    <div class="btn-group flex-grow-1 mr-1 mb-1">
                                         <a
                                             class="btn btn-secondary btn-block o_download_btn"
                                             t-att-href="folio.get_portal_url(report_type='pdf', download=True)"
                                             title="Download"
                                         ><i class="fa fa-download" /> Download</a>
                                     </div>
-                                    <div class="btn-group mb-1">
+                                    <div class="btn-group flex-grow-1 mb-1">
                                         <a
                                             class="btn btn-secondary btn-block o_print_btn o_portal_invoice_print"
                                             t-att-href="folio.get_portal_url(report_type='pdf')"
@@ -113,15 +230,6 @@
                                         ><i class="fa fa-print" /> Print</a>
                                     </div>
                                 </div>
-                                <div>
-                                        <a
-                                        class="btn btn-secondary btn-block "
-                                        t-att-href="folio.get_portal_url(suffix='/precheckin')"
-                                        t-att-title="Precheckin"
-                                    >
-                                            Precheckin
-                                        </a>
-                                    </div>
                             </li>
 
                             <li
