Add Icon Field in pms_service

--- a/pms_base/views/pms_service.xml
+++ b/pms_base/views/pms_service.xml
@@ -31,6 +31,7 @@
                         </group>
                         <group id="main-right">
                             <field name="sequence" />
+                            <field name="icon" />
                         </group>
                     </group>
                     <notebook />
