[IMP] Improved compute method.

--- a/pms_base/views/pms_property.xml
+++ b/pms_base/views/pms_property.xml
@@ -130,6 +130,7 @@
                                     <field name="name" />
                                     <field name="type_id" />
                                     <field name="capacity" />
+                                    <field name="area" />
                                 </tree>
                             </field>
                         </page>
