--- a/pms_base/views/pms_property.xml
+++ b/pms_base/views/pms_property.xml
@@ -77,7 +77,7 @@
                         <group id="main-right">
                             <field name="parent_id" domain="[('id', '!=', id)]" />
                             <field name="tz" />
-                            <field name="owner_id" />
+                            <field name="owner_id" domain="[('is_property', '=', False)]" />
                             <field
                                 name="company_id"
                                 groups="base.group_multi_company"
