--- a/pms/views/folio_portal_templates.xml
+++ b/pms/views/folio_portal_templates.xml
@@ -270,7 +270,22 @@
                 </t>
                 <!-- main content-->
                 <div t-attf-class="card col-8 p-3" id="portal_folio_content">
-                    <div t-call="pms.report_folio_document" />
+                    <div class="o_portal_html_view shadow p-3">
+                        <div class="o_portal_html_loader text-center">
+                            <i
+                                class="fa fa-circle-o-notch fa-spin fa-2x fa-fw text-black-50"
+                            />
+                        </div>
+                        <iframe
+                            id="report_html"
+                            class="mt8 mb8"
+                            width="100%"
+                            height="1000px"
+                            frameborder="0"
+                            scrolling="yes"
+                            t-att-src="folio.get_portal_url(report_type='html')"
+                        />
+                    </div>
                 </div>
                 <!-- chatter -->
                 <div class="col-3" />
