--- a/pms/report/pms_folio_templates.xml
+++ b/pms/report/pms_folio_templates.xml
@@ -9,29 +9,29 @@
             <t t-set="doc" t-value="folio" />
         </t>
         <t t-set="address">
-            <div class="row">
-                    <div class="col-xs-6">
-                        <t
-                            t-if="len(doc.partner_invoice_ids)==1 and doc.partner_id != doc.partner_invoice_ids[0]"
-                        >
-                            <div
-                                t-field="doc.partner_invoice_ids[0]"
-                                t-options='{"widget": "contact", "fields": ["address", "name", "mobile"], "no_marker": True, "phone_icons": True}'
-                            />
-                        </t>
-                    </div>
-                    <div class="col-xs-5 col-xs-offset-1">
-                        <div
-                            t-field="doc.partner_id"
-                            t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'
+            <t t-if="doc.partner_id">
+                <address
+                        t-field="doc.partner_id"
+                        t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'
+                    />
+                <div t-if="doc.partner_id.vat" class="mt16">
+                    <t
+                            t-if="doc.company_id.country_id.vat_label"
+                            t-esc="doc.company_id.country_id.vat_label"
+                            id="inv_tax_id_label"
                         />
-                        <p t-if="doc.partner_id.vat">
-                            <t t-esc="doc.company_id.country_id.vat_label or 'TIN'" />
-                            :
-                            <span t-field="doc.partner_id.vat" />
-                        </p>
-                    </div>
-            </div>
+                    <t t-else="">Tax ID</t>: <span t-field="doc.partner_id.vat" />
+                </div>
+            </t>
+            <t t-else="">
+                <div t-field="doc.partner_name" />
+                <t t-if="doc.email">
+                    <div t-field="doc.email" />
+                </t>
+                <t t-if="doc.mobile">
+                    <div t-field="doc.mobile" />
+                </t>
+            </t>
         </t>
         <div class="page">
             <div class="oe_structure" />
