[FIX] pms: add url @ property view

--- a/pms_l10n_es/views/pms_property_views.xml
+++ b/pms_l10n_es/views/pms_property_views.xml
@@ -44,6 +44,7 @@
                         <group>
                             <field name="ine_tourism_number" />
                             <field name="ine_category_id" />
+                            <field name="website" />
                         </group>
                     </div>
                     <div class="col-6">
