[IMP]pms: autoreconcile payments folios with invoices posted

--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -538,7 +538,9 @@
                             <field name="payment_ids" nolabel="1">
                                 <tree>
                                     <field name="journal_id" string="Payment Mode" />
+                                    <field name="create_uid" />
                                     <field name="date" />
+                                    <field name="payment_type" />
                                     <field name="amount" />
                                     <field name="partner_id" invisible="1" />
                                     <field name="state" invisible="1" />
