--- a/pms/views/pms_property_views.xml
+++ b/pms/views/pms_property_views.xml
@@ -85,6 +85,27 @@
                                 <field name="room_ids" />
                             </group>
                         </page>
+                        <page string="Invoicing" name="property_invoicing">
+                            <group>
+                                <field name="default_invoicing_policy" />
+                                <field
+                                    name="journal_simplified_invoice_id"
+                                    attrs="{'required': [('default_invoicing_policy', '!=', 'manual')]}"
+                                    domain="[
+                                        ('type', '=', 'sale'),
+                                        ('company_id','=',company_id),
+                                    ]"
+                                />
+                                <field
+                                    name="journal_normal_invoice_id"
+                                    attrs="{'required': [('default_invoicing_policy', '!=', 'manual')]}"
+                                    domain="[
+                                        ('type', '=', 'sale'),
+                                        ('company_id','=',company_id),
+                                    ]"
+                                />
+                            </group>
+                        </page>
                         <page string="Email Configuration">
                             <group>
                                 <div class="row">
